--- a/style.css
+++ b/style.css
@@ -405,11 +405,48 @@ svg {
     grid-template-rows: 200px 200px 200px;
     grid-gap: 1rem;
 }
-.grid-proyectos img {
-    object-fit: cover;
+ 
+.grid-proyectos .item a {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    width: 270px;
+    height: 200px;
+}
+  
+.grid-proyectos .item a span,.grid-proyectos .item a img {
+    transition: transform 0.5s ease-out;
+  }
+  
+.grid-proyectos .item a img {
+    display: inline-block;
+    border-radius: 10px;
+    object-fit:cover;
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+  }
+  
+.grid-proyectos .item  a span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    color: #eeedf0;
+    padding: 20px;
+}
+  
+.grid-proyectos .item a:hover img {
+    transform: translateX(-100%);
+}
+  
+.grid-proyectos  a:hover span,
+.grid-proyectos [data-animation] a:hover span {
+    transform: none;
 }
 
 #contacto{
