--- a/styleSmall.css
+++ b/styleSmall.css
@@ -196,6 +196,11 @@
             stroke-dashoffset:28;
         }
     }
+
+    #contacto{
+        height: auto;
+        margin: 0;
+    }
     .grid-proyectos{
     grid-template-columns: 300px;
     grid-template-rows: 250px 250px ;
@@ -227,6 +232,7 @@
     .container .links{
         margin-top: 25px;
         display: flex;
+        margin-bottom: 0;
     }
 
     .links a .icon .icon-inner, .ionicon, svg{
