--- a/styleSmallLandscape.css
+++ b/styleSmallLandscape.css
@@ -1,5 +1,4 @@
-/* extra small devices */
-@media (max-width: 575.98px) {  
+@media (min-width: 576px) and (max-width: 767.98px) {  
     h1{
         font-size: 20pt;
     }
@@ -57,13 +56,7 @@
     .container{
         padding: 0;
         margin: 0;
-        max-width: 100vw;
         overflow-x: hidden;
-    }
-    section{
-        max-width: 100vw;
-        display: flex;
-        margin: 50px 10px;
     }
 
     .inicio {
@@ -72,12 +65,7 @@
         background-size:100%;   
     }
     
-    .inicio .perfil{
-        position: absolute;
-        bottom: 0;
-        right: 10;
-        height: 65vh;
-    }
+   
     .wellcome h2{
         font-size: 15pt;
     }
@@ -154,13 +142,6 @@
         font-size: 9pt;
         font-weight: 300;
     }
-    
-    .skills.lenguages{
-        display: grid;
-        grid-template-columns: 30vw 30vw 30vw;
-       
-    }
-
         
     @keyframes p25{
         100%{
@@ -210,8 +191,15 @@
     }
 
     .grid-proyectos{
-    grid-template-columns: 300px;
-    grid-template-rows: 250px 250px ;
+        width: 90%;
+        padding: 1rem;
+        margin: 0 auto;
+        display: grid;
+        justify-content: center;
+        grid-template-columns: 45% 45%;
+        grid-template-rows: 250px ;
+        
+
     }
     .grid-proyectos .item:active img {
         transform: translateX(-100%);
@@ -220,6 +208,17 @@
     .grid-proyectos  .item:active .background,
     .grid-proyectos [data-animation] .item:active .background {
         transform: none;
+    }
+
+    .grid-proyectos .item img{
+        height: 85%;
+    }
+    .grid-proyectos .item p{
+        font-size: 11pt;
+    }
+
+    .grid-proyectos .item .background {
+        font-size: 9pt;
     }
 
     #contacto .container {
@@ -266,4 +265,5 @@
         visibility: visible;
         transform: translateX(0) translateY(0) rotate(0);
     }
+        
 }
